# template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yml  justfile  project_management.py  pyproject.toml
.github/workflows/: test-copier-template.yml
copy_this/: .gitattributes  .pre-commit-config.yaml  README.md  README.md.jinja  _quarto.yml.jinja  bump_version.py  justfile.jinja  pyproject.toml.jinja  secrets.toml
copy_this/.github/workflows/: ci_cd.yml.jinja  publish.yml.jinja
copy_this/data/01_raw/: .gitkeep
copy_this/data/02_bronze/: .gitkeep
copy_this/data/03_silver/: .gitkeep
copy_this/data/04_gold/: .gitkeep
copy_this/docs/: data_product.qmd.jinja
copy_this/src/{{project_name}}/: hello.py
