[project]
name = "template"
version = "0.1.0"
description = "Copier template for best practices and preferred tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.10",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "quartodoc>=0.9.1",
]

[tool.ruff]
src = [ "template", "tests",]
line-length = 120
exclude = [ ".git", ".ruff_cache", ".venv", "__pypackages__", "__init__.py",]

[tool.autopep8]
max_line_length = 120

[tool.ruff.lint]
select = [ "ALL",]
ignore = [ ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

